# defect-detection

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt
.github/workflows/: README.md  ci.yml  codeql.yml  docker.yml  format.yml  release.yml
apps/normitri-cli/: main.cpp
cmake/: CompilerWarnings.cmake  NormitriConfig.cmake.in
data/images/: README.md
docs/: README.md  act-local-testing.md  api-reference.md  architecture.md  building.md  company-and-aim.md  dependencies.md  detection-efficiency.md  development.md  implementation_plan.md  inference-contract.md  inference-design-and-gaps.md  inference-details.md  preprocessing.md  quality-and-maturity.md  threading-and-memory-management.md  workflow.md
docs/flowchart_images/: README.md  batch_parallel.mmd  customer_camera_parallel.mmd  end_to_end_flow.mmd  pipeline_overview.mmd  single_frame_pipeline.mmd
docs/issues/: logs.md
include/normitri/app/: config.hpp  pipeline_runner.hpp  pipeline_runner_tbb.hpp
include/normitri/core/: defect.hpp  defect_result.hpp  error.hpp  frame.hpp  pipeline.hpp  pipeline_stage.hpp
include/normitri/vision/: color_convert_stage.hpp  defect_decoder.hpp  defect_detection_stage.hpp  inference_backend.hpp  inference_result.hpp  load_image.hpp  mock_inference_backend.hpp  normalize_stage.hpp  onnx_inference_backend.hpp  resize_stage.hpp  tensorrt_inference_backend.hpp
models/: README.md
models/onnx-community__yolov10n/: README.md  preprocessor_config.json
models/onnx-community__yolov10n/onnx/: model.onnx  model_fp16.onnx  model_int8.onnx  model_q4.onnx  model_uint8.onnx
scripts/: build_nomitri.sh  build_tensorrt_engine.sh  convert_mermaid_to_png.py  docker_nomitri.sh  download_onnx_models.sh  download_sample_images.sh
src/app/: config.cpp  pipeline_runner.cpp  pipeline_runner_tbb.cpp
src/core/: frame.cpp  pipeline.cpp
src/vision/: color_convert_stage.cpp  defect_decoder.cpp  defect_detection_stage.cpp  frame_cv_utils.cpp  frame_cv_utils.hpp  inference_backend.cpp  load_image.cpp  mock_inference_backend.cpp  normalize_stage.cpp  onnx_inference_backend.cpp  resize_stage.cpp  tensorrt_inference_backend.cpp
tests/: CMakeLists.txt
tests/integration/: full_pipeline_test.cpp
tests/unit/app/: pipeline_runner_tbb_test.cpp
tests/unit/core/: defect_test.cpp  frame_test.cpp  pipeline_test.cpp
tests/unit/vision/: defect_decoder_test.cpp  mock_inference_backend_test.cpp  onnx_inference_backend_test.cpp  tensorrt_inference_backend_test.cpp
